[gd_scene load_steps=5 format=3 uid="uid://c67ca8an0jca8"]

[ext_resource type="Script" path="res://addons/godot_tabs/Object.gd" id="1_3k7yt"]
[ext_resource type="Texture2D" uid="uid://b04luapofq2m0" path="res://icon.png" id="2_m3i6a"]
[ext_resource type="Script" path="res://addons/godot_tabs/DragAndDropTexture.gd" id="3_bdwnv"]
[ext_resource type="PackedScene" uid="uid://dy6ss7u7ftmc2" path="res://addons/godot_tabs/ObjectForm.tscn" id="4_ajsqm"]

[node name="Object" type="PanelContainer" groups=["godot_tabs_objects"]]
script = ExtResource("1_3k7yt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.4, 0.4, 0.4, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_m3i6a")
script = ExtResource("3_bdwnv")
object_path = NodePath("../../..")

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "‚ü≥"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="EditButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "‚úé"

[node name="SeeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "üëÅ"

[node name="RemoveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "X
"

[node name="GridContainer" parent="MarginContainer" instance=ExtResource("4_ajsqm")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureRect/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SeeButton" to="." method="_on_see_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="closed" from="MarginContainer/GridContainer" to="." method="_on_close_button_pressed"]
[connection signal="validated" from="MarginContainer/GridContainer" to="." method="_on_validate_object_button_pressed"]

[editable path="MarginContainer/GridContainer"]
